--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <input type="color" name="color2" id="color2" value="#ffffff">
 
 <h3>Curent CSS background</h3>
+<h3 id="textContent"></h3>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
